--- a/src/components/sections/participate/participate.module.css
+++ b/src/components/sections/participate/participate.module.css
@@ -51,6 +51,8 @@
   position: absolute;
   top: 0;
   z-index: 0;
+  overflow: hidden;
+  border-radius: 40rem 40rem 0 0 ;
 }
 
 @media screen and (max-width: 480px) {
