--- a/src/components/common/slider-layout/slider-layout.module.css
+++ b/src/components/common/slider-layout/slider-layout.module.css
@@ -41,11 +41,22 @@
 
 @media screen and (max-width: 480px) {
   .arrowContainer {
-    width: 300rem;
+    width: 100%;
+    padding-left: 20rem;
+    box-sizing: border-box;
+  }
+
+  .isArrowTopPos .prevArrow, .nextArrow {
+    top: 43rem!important;
+  }
+
+  .isArrowTopPos .nextArrow, .prevArrow {
+    top: 43rem!important;
   }
 
   .prevArrow {
     top: calc(50% - 16rem);
+    left: -0rem;
   }
   
   .prevArrow:disabled {
@@ -55,6 +66,6 @@
   
   .nextArrow {
     top: calc(50% - 16rem);
-    right: 4rem;
+    right: 0rem;
   }
 }
