--- a/src/components/sections/about-us/about-us-card/about-us-card.module.css
+++ b/src/components/sections/about-us/about-us-card/about-us-card.module.css
@@ -3,3 +3,10 @@
   gap: 16rem;
   grid-auto-flow: column;
 }
+
+@media screen and (max-width: 480px) {
+  .card {
+    gap: 8rem;
+    grid-auto-flow: row;
+  }
+}
