--- a/src/components/sections/important-things/important-things-card/important-things-card.module.css
+++ b/src/components/sections/important-things/important-things-card/important-things-card.module.css
@@ -1,13 +1,13 @@
 .card {
   display: flex;
   align-items: flex-start;
+  padding-top: 65rem;
 }
 
 .content {
   background: linear-gradient(233.99deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 45.83%);
   backdrop-filter: blur(40px);
   border-radius: 40rem;
-  background-color: var(--c-dark-1);
   width: 278rem;
   height: 290rem;
   display: flex;
@@ -35,26 +35,22 @@
 }
 
 @media screen and (max-width: 480px) {
-  .card {
-    height: 135rem;
-    align-items: flex-end!important;
-
-  }
-
+  
   .content {
-    width: 130rem;
-    height: 123rem;
-    padding-bottom: 20rem;
+    width: 205rem;
+    height: 197rem;
+    padding: 16rem;
   }
-
+  
   .imageContainer {
-    bottom: 44rem;
-    width: 98rem;
-    height: 98rem;
+    width: 130rem;
+    height: 130rem;
+    margin-bottom: 16rem;
+    margin-top: -80rem;
   }
-
-  .title {
-    font-size: var(--fz-body-small);
-    line-height: 1.3;
+  
+  .text {
+    font-size: var(--fz-b-small);
+    line-height: 18rem;
   }
 }
