--- a/src/components/sections/it-is-for-you/it-is-for-you.module.css
+++ b/src/components/sections/it-is-for-you/it-is-for-you.module.css
@@ -59,16 +59,32 @@
 
 
 @media screen and (max-width: 480px) {
+  .itIsForYou {
+    padding-top: 20rem;
+    padding-bottom: 40rem;
+  }
+
   .content {
-    width: 280rem;
-    justify-content: center;
-    align-items: flex-start;
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    gap: 24rem;
+    justify-items: center;
+  }
+
+  .buttonContainer {
+    display: none;
   }
 
   .textContainer {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    width: 280rem;
   }
 
+  .title {
+    font-size: var(--fz-c-medium);
+    line-height: 30rem;
+    width: 100%;
+    margin-bottom: 24rem;
+
+  }
 }
