--- a/src/components/sections/opening/opening-card-list/opening-card-list.module.css
+++ b/src/components/sections/opening/opening-card-list/opening-card-list.module.css
@@ -31,3 +31,33 @@
 .listElement3 > article {
   border-radius: 0 24rem 24rem 24rem;
 }
+
+@media screen and (max-width: 480px) {
+  .list {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "article1"
+    "article2"
+    "article3";
+    width: 100%;
+    margin-top: -30rem;
+    justify-items: center;
+    gap: 16rem;
+  }
+
+  .listElement1 > article {
+    border-radius: 24rem;
+  }
+
+  .listElement2 > article {
+    border-radius: 24rem;
+  }
+
+  .listElement2 {
+    justify-self: center;
+  }
+
+  .listElement3 > article {
+    border-radius: 24rem;
+  }
+}
