--- a/src/components/sections/opening/opening-card-list/opening-card/opening-card.module.css
+++ b/src/components/sections/opening/opening-card-list/opening-card/opening-card.module.css
@@ -27,3 +27,27 @@
   line-height: 26rem;
   color: var(--c-gray-1)
 }
+
+@media screen and (max-width: 480px) {
+  .card {
+    padding: 16rem;
+    gap: 16rem;
+    grid-auto-flow: row;
+    width: 280rem;;
+  }
+  
+  .textContainer {
+    width: 100%;
+  }
+  
+  .title {
+    font-size: var(--fz-b-big);
+    line-height: 24rem;
+    margin-bottom: 8rem;
+  }
+  
+  .text {
+    font-size: var(--fz-b-small);
+    line-height: 16rem;
+  }
+}
