--- a/src/components/sections/opening/opening.module.css
+++ b/src/components/sections/opening/opening.module.css
@@ -22,7 +22,7 @@
   z-index: 4;
   font-family: var(--f-basic);
   color: var(--c-white);
-  width: 650rem;
+  width: 690rem;
   margin-top: 91rem;
 }
 
@@ -102,16 +102,61 @@
 
 
 @media screen and (max-width: 480px) {
+  .opening {
+    padding-bottom: 40rem;
+  }
   .content {
-    width: 280rem;
-    justify-content: center;
-    align-items: flex-start;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10rem;
+    justify-items: center;
   }
 
   .textContainer {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    width: 280rem;
+    margin-top: 0;
   }
 
+  .about {
+    gap: 12rem;
+    margin-bottom: 12rem;
+    grid-auto-flow: row;
+  }
+  .title {
+    font-size: var(--fz-c-medium);
+    line-height: 30rem;
+    margin-bottom: 6rem;
+  }
+  
+  .text {
+    font-size: var(--fz-b-medium);
+    line-height: 22rem;
+    color: var(--c-gray-2);
+    margin-bottom: 24rem;
+  }
+
+  .imageContainer {
+    width: 100%;
+    height: 280rem;
+  }
+
+  .buttonContainer {
+    width: 280rem;
+    margin-bottom: 12rem;
+  }
+
+  .gift {
+    width: 100%;
+  }
+
+  .giftText {
+    font-size: var(--fz-b-medium);
+    line-height: 22rem;
+  }
+  
+
+  .curveArrow {
+    display: none;
+  }
 }
