--- a/src/components/sections/participate/participate.module.css
+++ b/src/components/sections/participate/participate.module.css
@@ -19,6 +19,7 @@
   flex-direction: column;
   font-family: var(--f-basic);
   margin: 74rem 0 0 59rem;
+  z-index: 1;
 }
 
 .title {
@@ -27,6 +28,12 @@
   line-height: 46rem;
   color: var(--c-white);
   margin-bottom: 16rem;
+  width: 400rem;
+}
+
+.subtitle {
+  color: var(--c-gray-1);
+  text-decoration-line: line-through;
 }
 
 .text {
@@ -56,5 +63,58 @@
 }
 
 @media screen and (max-width: 480px) {
+  .participate {
+    padding-top: 20rem;
+  }
+
+  .content {
+    background-color: var(--c-black);
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 280rem;
+    border-radius: 40rem;
+    position: relative;
+    box-sizing: border-box;
+  }
   
+  .textContainer {
+    display: flex;
+    flex-direction: column;
+    font-family: var(--f-basic);
+    margin: 0;
+    width: 232rem;
+    margin: 32rem 24rem 41rem 24rem;
+  }
+  
+  .title {
+    font-size: var(--fz-c-medium);
+    line-height: 30rem;
+    margin-bottom: 8rem;
+    width: 100%;
+  }
+  
+  .text {
+    font-size: var(--fz-b-small);
+    line-height: 18rem;
+    margin-bottom: 24rem;
+  }
+  
+  .buttonContainer {
+    width: 177rem;
+  }
+  
+  .imageContainer {
+    width: 100%;
+    height: 200rem;
+    z-index: 1;
+  }
+  
+  .bgBubble {
+    position: absolute;
+    top: 0;
+    z-index: 0;
+    overflow: hidden;
+    border-radius: 40rem 40rem 0 0;
+  }
 }
