--- a/src/components/layouts/index-page-layout/bg-elements/bg-elements.module.css
+++ b/src/components/layouts/index-page-layout/bg-elements/bg-elements.module.css
@@ -48,35 +48,35 @@
 
 
 .b5 {
-  top: 1750rem;
+  top: 1650rem;
   left: 0rem;
   width: 100%;
   height: 1713rem;
 }
 
 .b6 {
-  top: 2930rem;
+  top: 2850rem;
   left: 0rem;
   width: 506rem;
   height: 898rem;
 }
 
 .b7 {
-  top: 3400rem;
+  top: 3500rem;
   right: 0rem;
   width: 1107rem;
   height: 1107rem;
 }
 
 .b8 {
-  top: 4132rem;
+  top: 4300rem;
   right: 0;
   width: 618rem;
   height: 1199rem;
 }
 
 .b9 {
-  top: 5411rem;
+  top: 5480rem;
   left: 101rem;
   width: 1121rem;
   height: 1121rem;
@@ -138,29 +138,94 @@
 }
 
 .i7 {
-  top: 4360rem;
+  top: 4500rem;
   right: 367rem;
   width: 286rem;
   height: 289rem;
 }
 
 .i8 {
-  top: 5328rem;
+  top: 5500rem;
   right: 74rem;
   width: 302rem;
   height: 298rem;
 }
 
 .i9 {
-  top: 6253rem;
+  top: 6350rem;
   left: 0;
   width: 227rem;
   height: 166rem;
 }
 
 .i10 {
-  top: 6235rem;
+  top: 6350rem;
   right: 0;
   width: 135rem;
   height: 193rem;
+}
+
+
+.bubbles_480 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.bubbles_480 > div {
+  position: absolute;
+  display: none;
+}
+
+.b1_480 {
+  right: 0;
+  top: 1247rem;
+  width: 100%;
+  height: 638rem;
+}
+
+.b2_480 {
+  right: 0;
+  top: 1684rem;
+  width: 100%;
+  height: 600rem;
+}
+
+.b3_480 {
+  top: 2456rem;
+  width: 250rem;
+  height: 400rem;
+  right: 0;
+}
+
+.b4_480 {
+  top: 2880rem;
+  left: 0;
+  width: 230rem;
+  height: 600rem;
+}
+
+.b5_480 {
+  top: 3543rem;
+  right: 0;
+  width: 100%;
+  height: 500rem;
+}
+
+
+@media screen and (max-width: 480px) {
+  .bubbles > div {
+    display: none;
+  }
+
+  .bubbles_480 > div {
+    display: block;
+  }
+
+  .items > div {
+    display: none;
+  }
+  
 }
