--- a/src/components/sections/important-things/important-things-card/important-things-card.module.css
+++ b/src/components/sections/important-things/important-things-card/important-things-card.module.css
@@ -7,6 +7,7 @@
 .content {
   background: linear-gradient(233.99deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 45.83%);
   backdrop-filter: blur(40px);
+  border: 1rem solid rgba(0, 0, 0, 0.4);
   border-radius: 40rem;
   width: 278rem;
   height: 290rem;
