--- a/src/components/sections/what-is-it/what-is-it-card/what-is-it-card.module.css
+++ b/src/components/sections/what-is-it/what-is-it-card/what-is-it-card.module.css
@@ -1,6 +1,7 @@
 .card {
   background: linear-gradient(233.99deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 45.83%);
   backdrop-filter: blur(40px);
+  border: 1rem solid rgba(0, 0, 0, 0.4);
   padding: 24rem;
   display: grid;
   gap: 16rem;
