--- a/src/components/sections/what-is-it/what-is-it.module.css
+++ b/src/components/sections/what-is-it/what-is-it.module.css
@@ -1,3 +1,7 @@
+.imageContainer {
+  display: none;
+}
+
 .whatIsIt {
   width: 100%;
   background-color: transparent;
@@ -54,6 +58,7 @@
     width: 100%;
     height: 360rem;
     margin-bottom: 16rem;
+    display: block;
   }
 
   .whatIsIt {
