--- a/src/components/ui/basic-input/basic-input.module.css
+++ b/src/components/ui/basic-input/basic-input.module.css
@@ -1,26 +1,30 @@
 .input {
-  border: 1rem solid var(--c-gray-2);
+  border: 1rem solid var(--c-dark-3);
   padding: 20rem 24rem;
   color: var(--c-gray-2);
-  font-weight: 300;
-  font-size: var(--fz-body-big);
+  font-weight: 400;
+  font-size: var(--fz-b-big);
   font-family: var(--f-basic);
-  
-  height: 60rem;
+  height: 62rem;
   width: 100%;
   box-sizing: border-box;
   background-color: transparent;
   outline: none;
   border-radius: 40rem;
-  line-height: 1.3;
+  line-height: 24rem;
+  transition: 0.35s ease-out border-color;
+}
+
+.input:focus {
+  border-color: var(--c-purple);
 }
 
 @media screen and (max-width: 480px) {
   .input {
     padding: 9rem 24rem;
-    font-size: var(--fz-body-middle);
+    font-size: var(--fz-b-small);
     height: 40rem;
-    line-height: 1.55;
+    line-height: 22rem;
 
   }
 }
