add amo cdn support

--- a/src/components/popups/form-popup/form-popup.module.css
+++ b/src/components/popups/form-popup/form-popup.module.css
@@ -106,6 +106,32 @@
   width: 174rem;
 }
 
+.phoneInput {
+  border: 1rem solid var(--c-dark-3);
+  padding: 20rem 24rem;
+  color: var(--c-gray-2);
+  font-weight: 400;
+  font-size: var(--fz-b-big);
+  font-family: var(--f-basic);
+  height: 62rem;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: transparent;
+  outline: none;
+  border-radius: 40rem;
+  line-height: 24rem;
+  transition: 0.35s ease-out border-color;
+}
+
+.phoneInput:focus {
+  border-color: var(--c-purple);
+}
+
+.phoneInputContainer {
+  width: 100%;
+}
+
+
 @media screen and (max-width: 480px) {
   .formPopup {
     width: 280rem;
@@ -170,5 +196,13 @@
 
   .buttonContainer {
     width: 100%;
+  }
+
+  .phoneInput {
+    padding: 9rem 24rem;
+    font-size: var(--fz-b-small);
+    height: 40rem;
+    line-height: 22rem;
+
   }
 }
