--- a/src/components/sections/important-things/important-things.module.css
+++ b/src/components/sections/important-things/important-things.module.css
@@ -23,10 +23,10 @@
 }
 
 .list {
-  padding-top: 63rem;
+  /* padding-top: 63rem; */
   display: grid;
   column-gap: 30rem;
-  row-gap: 32rem;
+  /* row-gap: 32rem; */
   grid-template-columns: repeat(4, 1fr);
   justify-items: center;
   width: 100%;
