--- a/src/components/sections/opening/opening.module.css
+++ b/src/components/sections/opening/opening.module.css
@@ -13,8 +13,8 @@
 .content {
   width: 1200rem;
   display: grid;
-  grid-template-columns: 650rem 1fr;
-  gap: 10rem;
+  grid-template-columns: 640rem 1fr;
+  gap: 60rem;
 }
 
 .textContainer {
@@ -23,7 +23,7 @@
   font-family: var(--f-basic);
   color: var(--c-white);
   width: 690rem;
-  margin-top: 91rem;
+  margin-top: 50rem;
 }
 
 .about {
@@ -48,6 +48,10 @@
   font-size: var(--fz-b-small);
   font-weight: 400;
   line-height: 16rem;
+  border: 1rem solid var(--c-purple);
+  border-radius: 16rem;
+  padding: 8rem 12rem;
+
 }
 
 
@@ -56,20 +60,36 @@
   font-weight: 700;
   line-height: 62rem;
   color: var(--c-white);
-  margin-bottom: 12rem;
+  margin-bottom: 54rem;
 }
 
-.text {
-  font-size: var(--fz-b-big);
-  font-weight: 400;
-  line-height: 26rem;
-  color: var(--c-gray-2);
-  margin-bottom: 40rem;
-}
 
 .imageContainer {
+  position: relative;
   width: 500rem;
-  height: 750rem;
+  height: 690rem;
+}
+
+.nameContainer {
+  position: absolute;
+  top: 50rem;
+  right: -29rem;
+  width: 140rem;
+}
+
+.name {
+  font-size: var(--fz-c-medium);
+  font-weight: 400;
+  line-height: 24rem;
+  margin-bottom: 6rem;
+  color: var(--c-white);
+}
+
+.jobTitle {
+  font-size: var(--fz-b-small);
+  font-weight: 700;
+  line-height: 12rem;
+  color: var(--c-gray-1);
 }
 
 .buttonContainer {
@@ -78,19 +98,12 @@
   position: relative;
 }
 
-.curveArrow {
-  position: absolute;
-  width: 85rem;
-  height: 113rem;
-  left: -95rem;
-  top: -120%;
-}
 
 .gift {
   display: grid;
   gap: 16rem;
   grid-auto-flow: column;
-  width: 325rem;
+  width: 400rem;
 }
 
 .giftText {
@@ -101,15 +114,18 @@
 }
 
 
+
+
+
 @media screen and (max-width: 480px) {
   .opening {
-    padding-bottom: 40rem;
+    padding-bottom: 0
   }
   .content {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 10rem;
+    gap: 22rem;
     justify-items: center;
   }
 
@@ -123,10 +139,18 @@
     margin-bottom: 12rem;
     grid-auto-flow: row;
   }
+
+  .time {
+
+    border: none;
+    padding: 0;
+  
+  }
+
   .title {
     font-size: var(--fz-c-medium);
     line-height: 30rem;
-    margin-bottom: 6rem;
+    margin-bottom: 30rem;
   }
   
   .text {
@@ -141,12 +165,31 @@
     height: 280rem;
   }
 
+  .nameContainer {
+    position: absolute;
+    top: 16rem;
+    right: 0rem;
+    width: 100rem;
+  }
+  
+  .name {
+    font-size: var(--fz-b-medium);
+    line-height: 16rem;
+    margin-bottom: 4rem;
+  }
+  
+  .jobTitle {
+    font-size: 8rem;
+    line-height: 10rem;
+  }
+
   .buttonContainer {
     width: 280rem;
     margin-bottom: 12rem;
   }
 
   .gift {
+    gap: 8rem;
     width: 100%;
   }
 
@@ -155,8 +198,4 @@
     line-height: 22rem;
   }
   
-
-  .curveArrow {
-    display: none;
-  }
 }
