--- a/src/components/sections/what-is-it/what-is-it-card/what-is-it-card.module.css
+++ b/src/components/sections/what-is-it/what-is-it-card/what-is-it-card.module.css
@@ -14,7 +14,7 @@
   font-size: var(--fz-b-big);
   font-weight: 400;
   line-height: 26rem;
-  color: var(--c-gray-1);
+  color: var(--c-white);
   font-family: var(--f-basic);
 }
 
