--- a/src/components/layouts/index-page-layout/bg-elements/bg-elements.module.css
+++ b/src/components/layouts/index-page-layout/bg-elements/bg-elements.module.css
@@ -18,6 +18,13 @@
   position: absolute;
 }
 
+.openingBg {
+  top: 0rem;
+  right: 0rem;
+  width: 879rem;
+  height: 841rem;
+}
+
 .b1 {
   top: 0;
   left: 0;
@@ -179,6 +186,13 @@
   display: none;
 }
 
+.openingBg_480 {
+  right: 0;
+  top: 380rem;
+  width: 100%;
+  height: 300rem;
+}
+
 .b1_480 {
   right: 0;
   top: 1247rem;
@@ -212,6 +226,13 @@
   right: 0;
   width: 100%;
   height: 500rem;
+}
+
+.b6_480 {
+  right: 0;
+  top: 380rem;
+  width: 100%;
+  height: 300rem;
 }
 
 
