--- a/src/components/sections/opening/opening.module.css
+++ b/src/components/sections/opening/opening.module.css
@@ -32,26 +32,25 @@
   grid-auto-flow: column;
   width: max-content;
   align-items: center;
-  margin-bottom: 6rem;
+  margin-bottom: 38rem;
 }
 
 .tag {
   padding: 8rem 12rem;
-  font-size: var(--fz-b-small);
+  font-size: var(--fz-c-medium);
   border: 1rem solid rgba(255, 255, 255, 0.16);
   width: max-content;
   border-radius: 16rem;
-  line-height: 16rem;
+  line-height: 24rem;
 }
 
 .time {
-  font-size: var(--fz-b-small);
+  font-size: var(--fz-c-medium);
   font-weight: 400;
-  line-height: 16rem;
+  line-height: 24rem;
   border: 1rem solid var(--c-purple);
   border-radius: 16rem;
   padding: 8rem 12rem;
-
 }
 
 
@@ -136,12 +135,18 @@
 
   .about {
     gap: 12rem;
-    margin-bottom: 12rem;
+    margin-bottom: 20rem;
     grid-auto-flow: row;
   }
 
-  .time {
+  .tag {
+    font-size: var(--fz-b-small);
+    line-height: 14rem;
+  }
 
+  .time {
+    font-size: var(--fz-b-small);
+    line-height: 14rem;
     border: none;
     padding: 0;
   
